<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/purpleHaze"
    >
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePointV12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePointV25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePointV26"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".26" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePointV42"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".42" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePointV45"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".45" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePointV50"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePointV58"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".58" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePointV74"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".74" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePointV75"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePointV10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePointV90"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH08"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH87"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.87"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90"
        />


    <TextView
        android:id="@+id/hello"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="15sp"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guidelineH10"
        android:textColor="@color/black"
        android:background="@color/cyan"
        />
    <ImageButton
        android:id= "@+id/restoreButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity= "fill_vertical"
        android:onClick= "allButtonClickHandler"
        android:text="@string/enter"
        android:src="@drawable/enter"
        android:contentDescription="@string/click_to_enter"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/guidelineH10"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH30"
        app:layout_constraintLeft_toRightOf="@+id/guidelinePointV25"
        app:layout_constraintRight_toLeftOf="@+id/guidelinePointV75"
        />

    <EditText
        android:id="@+id/personEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="@string/login_id"
        android:inputType="textEmailAddress"
        android:text=""
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH30"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH45"
        app:layout_constraintLeft_toRightOf="@+id/guidelinePointV12"
        app:layout_constraintRight_toLeftOf="@+id/guidelinePointV90"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="@string/login_password"
        android:visibility="invisible"
        android:inputType="textPassword"
        app:layout_constraintTop_toTopOf="@+id/guidelineH45"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH60"
        app:layout_constraintLeft_toRightOf="@+id/guidelinePointV12"
        app:layout_constraintRight_toLeftOf="@+id/guidelinePointV90"
        android:autofillHints="" />

    <CheckBox
        android:id="@+id/showPassWord"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/showPassword"
        android:onClick="showPasswordCheckBoxHandler"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@+id/guidelineH60"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH75"
        app:layout_constraintLeft_toRightOf="@+id/guidelinePointV12"
        app:layout_constraintRight_toLeftOf="@+id/guidelinePointV90"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:onClick="allButtonClickHandler"
        app:layout_constraintTop_toTopOf="@+id/guidelineH75"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH85"
        app:layout_constraintLeft_toRightOf="@+id/guidelinePointV12"
        app:layout_constraintRight_toLeftOf="@+id/guidelinePointV90" />


    <ImageView
        android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/register"
        android:onClick="allButtonClickHandler"
        android:contentDescription="@string/registerImage"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guidelinePointV45"
        />

    <Button
        android:id= "@+id/myComment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity= "fill_vertical"
        android:onClick= "allButtonClickHandler"
        android:text="@string/feedBack"
        android:background="@color/lightCyan"
        android:visibility="visible"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/guidelinePointV45"
        app:layout_constraintRight_toLeftOf="@+id/guidelinePointV75"
        tools:ignore="RtlCompat" />

    <ImageView
        android:id="@+id/feedback"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/future"
        android:onClick="allButtonClickHandler"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/guidelinePointV75"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/todo" />


</androidx.constraintlayout.widget.ConstraintLayout>